# AppDashboardAndroid

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  gitignore.txt  main.cpp  networkdata.cpp  resources.qrc
qml/: CustomMenuBar.qml  CustomText.qml  GlobeScreen.qml  LandscapeMain.qml  LandscapeTemperature.qml  Main.qml  MenuButton.qml  MusicScreen.qml  NavScreen.qml  PlayStopButton.qml  PortraitMain.qml  PortraitTemperature.qml  ReverseScreen.qml  Separator.qml  TemperatureDriver.qml  TemperaturePassenger.qml  TemperatureScreen.qml  TopBar.qml
